<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- page title -->
    <TextView
        android:id="@+id/mainTitle"
        android:text="@string/main_title"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"/>

    <!-- launcher buttons -->
    <Button
        android:id="@+id/spotify_launch_btn"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="@dimen/activity_button_height"
        android:layout_below="@+id/mainTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/spotify_launch_btn" />
    <Button
        android:id="@+id/scores_launch_btn"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="@dimen/activity_button_height"
        android:layout_below="@+id/spotify_launch_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/scores_launch_btn" />
    <Button
        android:id="@+id/library_launch_btn"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="@dimen/activity_button_height"
        android:layout_below="@+id/scores_launch_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/library_launch_btn" />
    <Button
        android:id="@+id/build_it_bigger_launch_btn"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="@dimen/activity_button_height"
        android:layout_below="@+id/library_launch_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/build_it_bigger_launch_btn" />
    <Button
        android:id="@+id/bacon_reader_launch_btn"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="@dimen/activity_button_height"
        android:layout_below="@+id/build_it_bigger_launch_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/bacon_reader_launch_btn" />
    <Button
        android:id="@+id/capstone_launch_btn"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="@dimen/activity_button_height"
        android:layout_below="@+id/bacon_reader_launch_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/capstone_launch_btn" />


</RelativeLayout>
